--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ dist.jlink.output=${dist.jlink.dir}/SKYdrop
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-j-9.2.0.jar=/media/zenusha/New Volume/work/sem 2 project/mysql-connector-j-9.2.0-20250513T052309Z-001/mysql-connector-j-9.2.0/mysql-connector-j-9.2.0.jar
+file.reference.mysql-connector-j-9.2.0.jar-1=D:\\work\\sem 2 project\\mysql-connector-j-9.2.0-20250513T052309Z-001\\mysql-connector-j-9.2.0\\mysql-connector-j-9.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=
@@ -44,7 +45,8 @@ javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
 javac.modulepath=\
-    ${file.reference.mysql-connector-j-9.2.0.jar}
+    ${file.reference.mysql-connector-j-9.2.0.jar}:\
+    ${file.reference.mysql-connector-j-9.2.0.jar-1}
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
