--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\nirka\\AppData\\Roaming\\NetBeans\\25\\build.properties
+user.properties.file=C:\\Users\\Dell\\AppData\\Roaming\\NetBeans\\25\\build.properties
