--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -78,7 +78,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=SKYdrop
-main.class=skydrop.Main
+main.class=skydrop.view.LoginView
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
