--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,11 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=SKYdrop
+application.vendor=robonile
+auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=Facelets
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,10 +34,13 @@ dist.jar=${dist.dir}/SKYdrop.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SKYdrop
+endorsed.classpath=
 excludes=
+file.reference.junit-4.13.2.jar=C:\\Users\\ACER\\Downloads\\junit-4.13.2.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.junit-4.13.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
