--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,12 +35,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SKYdrop
 endorsed.classpath=
 excludes=
+file.reference.junit-4.13.2.jar=/home/zenusha/Downloads/junit-4.13.2.jar
 file.reference.mysql-connector-j-9.2.0.jar=/media/zenusha/New Volume/work/sem 2 project/mysql-connector-j-9.2.0-20250513T052309Z-001/mysql-connector-j-9.2.0/mysql-connector-j-9.2.0.jar
 file.reference.mysql-connector-j-9.2.0.jar-1=D:\\work\\sem 2 project\\mysql-connector-j-9.2.0-20250513T052309Z-001\\mysql-connector-j-9.2.0\\mysql-connector-j-9.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.junit-4.13.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=false
