--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,12 +35,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SKYdrop
 endorsed.classpath=
 excludes=
-file.reference.junit-4.13.2.jar=/home/zenusha/Downloads/junit-4.13.2.jar
+file.reference.jbcrypt-0.4.jar=lib/jbcrypt-0.4.jar
+file.reference.junit-4.13.2.jar=lib/junit-4.13.2.jar
 file.reference.mysql-connector-j-9.2.0.jar=lib/mysql-connector-j-9.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
+    ${file.reference.jbcrypt-0.4.jar}:\
     ${file.reference.junit-4.13.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
