made button functional

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,10 +35,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SKYdrop
 endorsed.classpath=
 excludes=
+file.reference.gson-2.10.1.jar=C:\\Users\\User\\Downloads\\gson-2.10.1.jar
+file.reference.stripe-java-24.9.0.jar=C:\\Users\\User\\Downloads\\stripe-java-24.9.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.gson-2.10.1.jar}:\
+    ${file.reference.stripe-java-24.9.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=false
