--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,14 +36,17 @@ dist.jlink.output=${dist.jlink.dir}/SKYdrop
 endorsed.classpath=
 endorsed.classpath=
 excludes=
+file.reference.gson-2.10.1.jar=lib/gson-2.10.1.jar
 file.reference.jbcrypt-0.4.jar=lib/jbcrypt-0.4.jar
 file.reference.junit-4.13.2.jar=lib/junit-4.13.2.jar
 file.reference.mysql-connector-j-9.2.0.jar=lib/mysql-connector-j-9.2.0.jar
+file.reference.stripe-java-24.9.0.jar=lib/stripe-java-24.9.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-<<<<<<< HEAD
+    ${file.reference.gson-2.10.1.jar}:\
+    ${file.reference.stripe-java-24.9.0.jar}
     ${file.reference.gson-2.10.1.jar}:\
     ${file.reference.stripe-java-24.9.0.jar}
 =======
