--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -206,7 +206,9 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.jbcrypt-0.4.jar}:\
     ${file.reference.junit-4.13.2.jar-1}:\
-<<<<<<< HEAD
+    ${file.reference.stripe-java-24.9.0.jar}:\
+    ${file.reference.gson-2.10.1.jar}:\
+    ${libs.absolutelayout.classpath}
     ${file.reference.gson-2.10.1.jar}:\
     ${file.reference.stripe-java-24.9.0.jar}
 =======
