--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,8 +43,8 @@ includes=**
 jar.compress=false
 
 javac.classpath=\
-    ${libs.absolutelayout.classpath}:\
     ${file.reference.gson-2.10.1.jar}:\
+    ${libs.absolutelayout.classpath}:\
     ${file.reference.jbcrypt-0.4.jar}:\
     ${file.reference.junit-4.13.2.jar}:\
     ${file.reference.mysql-connector-j-9.2.0.jar}:\
@@ -53,14 +53,19 @@ javac.classpath=\
 javac.compilerargs=--enable-preview
 javac.deprecation=false
 javac.external.vm=true
-javac.modulepath=${file.reference.mysql-connector-j-9.2.0.jar}
+javac.modulepath=\
+    ${file.reference.mysql-connector-j-9.2.0.jar}
 javac.processormodulepath=
-javac.processorpath=${javac.classpath}
+javac.processorpath=\
+    ${javac.classpath}
 javac.source=24
 javac.target=24
 
-javac.test.classpath=${javac.classpath}:${build.classes.dir}
-javac.test.modulepath=${javac.modulepath}
+javac.test.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
+javac.test.modulepath=\
+    ${javac.modulepath}
 javac.test.processorpath=${javac.test.classpath}
 
 javadoc.additionalparam=
@@ -87,11 +92,17 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
 
-run.classpath=${javac.classpath}:${build.classes.dir}
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
 run.jvmargs=--enable-preview
-run.modulepath=${javac.modulepath}
-run.test.classpath=${javac.test.classpath}:${build.test.classes.dir}
-run.test.modulepath=${javac.test.modulepath}
+run.modulepath=\
+    ${javac.modulepath}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 
 source.encoding=UTF-8
 src.dir=src
