--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,15 +1,12 @@
+#Sat Jun 21 15:56:09 GMT+05:45 2025
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-
-
 application.title=SkyDrop
 application.vendor=zenusha
-
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
-
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -18,48 +15,26 @@ build.generated.sources.dir=${build.dir}/generated-sources
 build.sysclasspath=ignore
 build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
-
 debug.classpath=${run.classpath}
 debug.modulepath=${run.modulepath}
 debug.test.classpath=${run.test.classpath}
 debug.test.modulepath=${run.test.modulepath}
-
-
-debug.classpath=${run.classpath}
-debug.modulepath=${run.modulepath}
-debug.test.classpath=${run.test.classpath}
-debug.test.modulepath=${run.test.modulepath}
-
 dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/SkyDrop.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SkyDrop
-
-
 endorsed.classpath=
 excludes=
-
 file.reference.gson-2.10.1.jar=lib/gson-2.10.1.jar
 file.reference.jbcrypt-0.4.jar=lib/jbcrypt-0.4.jar
 file.reference.junit-4.13.2.jar=lib/junit-4.13.2.jar
-file.reference.junit-4.13.2.jar=lib/junit-4.13.2.jar
 file.reference.mysql-connector-j-9.2.0.jar=lib/mysql-connector-j-9.2.0.jar
 file.reference.stripe-java-24.9.0.jar=lib/stripe-java-24.9.0.jar
-
 includes=**
 jar.compress=false
-
-
-javac.classpath=\
-    ${file.reference.gson-2.10.1.jar}:\
-    ${libs.absolutelayout.classpath}:\
-    ${file.reference.jbcrypt-0.4.jar}:\
-    ${file.reference.junit-4.13.2.jar}:\
-    ${file.reference.mysql-connector-j-9.2.0.jar}:\
-    ${file.reference.stripe-java-24.9.0.jar}
-
+javac.classpath=${file.reference.gson-2.10.1.jar}\:${libs.absolutelayout.classpath}\:${file.reference.jbcrypt-0.4.jar}\:${file.reference.junit-4.13.2.jar}\:${file.reference.mysql-connector-j-9.2.0.jar}\:${file.reference.stripe-java-24.9.0.jar}
 javac.compilerargs=--enable-preview
 javac.deprecation=false
 javac.external.vm=true
@@ -68,14 +43,13 @@ javac.processormodulepath=
 javac.processorpath=${javac.classpath}
 javac.source=24
 javac.target=24
-
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
-javac.test.modulepath=\
-    ${javac.modulepath}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
+javac.test.modulepath=${javac.modulepath}
 javac.test.processorpath=${javac.test.classpath}
-
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
@@ -88,31 +62,21 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-
-
 jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=SkyDrop
-
+junit.selected.version=4
 main.class=skydrop.view.LoginView
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
+run.classpath=${javac.classpath}\:${build.classes.dir}
 run.jvmargs=--enable-preview
-run.modulepath=\
-    ${javac.modulepath}
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
-run.test.modulepath=\
-    ${javac.test.modulepath}
-
+run.modulepath=${javac.modulepath}
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+run.test.modulepath=${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
