--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,4 @@
-#Sat Jun 21 15:56:09 GMT+05:45 2025
+#Sat Jun 21 17:19:21 GMT+05:45 2025
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
@@ -43,11 +43,7 @@ javac.processormodulepath=
 javac.processorpath=${javac.classpath}
 javac.source=24
 javac.target=24
-javac.test.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
 javac.test.modulepath=${javac.modulepath}
 javac.test.processorpath=${javac.test.classpath}
 javadoc.additionalparam=
