--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,17 +34,30 @@ file.reference.mysql-connector-j-9.2.0.jar=lib/mysql-connector-j-9.2.0.jar
 file.reference.stripe-java-24.9.0.jar=lib/stripe-java-24.9.0.jar
 includes=**
 jar.compress=false
-javac.classpath=${file.reference.gson-2.10.1.jar}\:${libs.absolutelayout.classpath}\:${file.reference.jbcrypt-0.4.jar}\:${file.reference.junit-4.13.2.jar}\:${file.reference.mysql-connector-j-9.2.0.jar}\:${file.reference.stripe-java-24.9.0.jar}
+javac.classpath=\
+    ${file.reference.gson-2.10.1.jar}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jbcrypt-0.4.jar}:\
+    ${file.reference.junit-4.13.2.jar}:\
+    ${file.reference.mysql-connector-j-9.2.0.jar}:\
+    ${file.reference.stripe-java-24.9.0.jar}
 javac.compilerargs=--enable-preview
 javac.deprecation=false
 javac.external.vm=true
-javac.modulepath=${file.reference.mysql-connector-j-9.2.0.jar}
+javac.modulepath=\
+    ${file.reference.mysql-connector-j-9.2.0.jar}
 javac.processormodulepath=
-javac.processorpath=${javac.classpath}
+javac.processorpath=\
+    ${javac.classpath}
 javac.source=24
 javac.target=24
-javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
-javac.test.modulepath=${javac.modulepath}
+javac.test.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
+javac.test.modulepath=\
+    ${javac.modulepath}
 javac.test.processorpath=${javac.test.classpath}
 javadoc.additionalparam=
 javadoc.author=false
@@ -63,16 +76,22 @@ jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=SkyDrop
 junit.selected.version=4
-main.class=skydrop.view.LoginView
+main.class=skydrop.SKYdrop
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-run.classpath=${javac.classpath}\:${build.classes.dir}
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
 run.jvmargs=--enable-preview
-run.modulepath=${javac.modulepath}
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
-run.test.modulepath=${javac.test.modulepath}
+run.modulepath=\
+    ${javac.modulepath}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
