--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,8 +28,8 @@ dist.jlink.output=${dist.jlink.dir}/SkyDrop
 endorsed.classpath=
 excludes=
 file.reference.gson-2.10.1.jar=lib/gson-2.10.1.jar
-file.reference.javax.activation-1.2.0__1_.jar=../../../../Downloads/javax.activation-1.2.0 (1).jar
-file.reference.javax.mail-1.6.2.jar=../../../../Downloads/javax.mail-1.6.2.jar
+file.reference.javax.activation-1.2.0.jar=lib/javax.activation-1.2.0.jar
+file.reference.javax.mail-1.6.2.jar=lib/javax.mail-1.6.2.jar
 file.reference.jbcrypt-0.4.jar=lib/jbcrypt-0.4.jar
 file.reference.junit-4.13.2.jar=lib/junit-4.13.2.jar
 file.reference.mysql-connector-j-9.2.0.jar=lib/mysql-connector-j-9.2.0.jar
@@ -37,6 +37,8 @@ file.reference.stripe-java-24.9.0.jar=lib/stripe-java-24.9.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.javax.mail-1.6.2.jar}:\
+    ${file.reference.javax.activation-1.2.0.jar}:\
     ${file.reference.gson-2.10.1.jar}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.jbcrypt-0.4.jar}:\
@@ -47,9 +49,7 @@ javac.compilerargs=--enable-preview
 javac.deprecation=false
 javac.external.vm=true
 javac.modulepath=\
-    ${file.reference.mysql-connector-j-9.2.0.jar}:\
-    ${file.reference.javax.mail-1.6.2.jar}:\
-    ${file.reference.javax.activation-1.2.0__1_.jar}
+    ${file.reference.mysql-connector-j-9.2.0.jar}
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
